# Wallet-sender-

./: .editorconfig  .flake8  .gitignore  .pylintrc  AUTO_BUY_FIXES_COMPLETE_2025_09_06.md  CHANGELOG.md  CHANGELOG_v2.0.md  CONTEXT_SUMMARY.md  DEPLOY_SUCCESS_REPORT.md  DEPLOY_SUCCESS_REPORT_29_08_2025.md  FIX_ABI_ERROR_2025_09_06.md  FIX_AUTO_BUY_ANALYSIS_2025_09_06.md  FIX_PURCHASE_CRASH_2025_09_06.md  FIX_STARTUP_ERRORS_2025_09_06.md  FIX_WBNB_POOLS_2025_09_06.md  NONCE_FIXES_COMPLETE_2025_09_06.md  NONCE_ISSUES_ANALYSIS_2025_09_06.md  PURCHASE_CRASH_FIX_2025_09_06.md  README.md  SALES_HANG_ANALYSIS_2025_09_06.md  SALES_HANG_FIXES_COMPLETE_2025_09_06.md  VERSION  WBNB_POOL_ISSUE.md  WalletSender.py  check_imports.py  cleanup_end.py  config.json  ending.py  export-token-0xdf179b6cadbc61ffd86a3d2e55f6d6e083ade6c1 (3).csv  export-tokenholders-for-contract-0xdf179b6cadbc61ffd86a3d2e55f6d6e083ade6c1 (2).csv  main.py  missing_code.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup_vscode_mcp.md  ОТЧЕТ_ИСПРАВЛЕНИЕ_NONCE_АВТОПОКУПКИ.md  ОТЧЕТ_ИСПРАВЛЕНИЙ_24_01_2025.md  ОТЧЕТ_УЛУЧШЕНИЕ_ЛОГИРОВАНИЯ_АВТОПОКУПОК.md  (+1 more)
WalletSender_Modular/WalletSender_Modular/: CHANGELOG.md  CURRENT_ISSUES_REPORT.md  LOGGING_FIX_REPORT.md  README_STABLE.md  REPORT_GENESIS.md  STABILIZATION_PLAN.md  analyze_crash.py  check_code_issues.py  config.json  crash_diagnosis.py  create_test_addresses.py  diagnostic_patch.py  fix_problems.py  improve_logging_system.py  install_deps.py  install_log.txt  main.py  normalize_addresses.py  normalize_addresses_fixed.py  pyproject.toml  pyrightconfig.json  remove_emoji.py  requirements.txt  run_app.py  setup.py  stability_patch.py  start_stable.bat  test_app_components.py  test_async_version.py  test_auto_sell_detailed.py  test_auto_sell_execution.py  test_auto_sell_fix.py  test_autosell_fixes.py  test_basic.py  test_cache_feature.py  test_components.py  test_core_modules.py  test_crash_fix.py  test_enhanced_logging.py  test_etherscan_api.py  (+25 more)
WalletSender_Modular/WalletSender_Modular/src/wallet_sender/: __init__.py  __main__.py  config.py  constants.py  qt_compat.py
WalletSender_Modular/WalletSender_Modular/src/wallet_sender/api/: __init__.py  bscscan.py
WalletSender_Modular/WalletSender_Modular/src/wallet_sender/core/: __init__.py  analytics.py  job_engine.py  nonce_manager.py  web3_provider.py
WalletSender_Modular/WalletSender_Modular/src/wallet_sender/services/: __init__.py  dex_swap_service.py  dex_swap_service_async.py  queue_executor.py  transaction_service.py
WalletSender_Modular/WalletSender_Modular/src/wallet_sender/ui/: __init__.py  log_windows.py  main_window.py
WalletSender_Modular/WalletSender_Modular/src/wallet_sender/ui/tabs/: __init__.py  analysis_tab.py  auto_buy_tab.py  auto_sales_tab.py  base_tab.py  direct_send_tab.py  found_tx_tab.py  history_tab.py  mass_distribution_tab.py  (+4 more)
WalletSender_Modular/WalletSender_Modular/src/wallet_sender/utils/: __init__.py  analytics.py  crash_diagnostics.py  gas_manager.py  logger.py  logger_enhanced.py  progress_manager.py  token_safety.py  unified_logger.py
WalletSender_Modular/WalletSender_Modular/src/walletsender_modular.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
WalletSender_Modular/WalletSender_Modular/tests/: test_dex_swap_service.py
(+176 files in other folders)
